# django-2fa-qna

./: LICENSE.txt  README.md  pyproject.toml  setup.py
account/: models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
config/: settings.py  urls.py
two_factor_auth/: admin.py  auth.py  models.py  serializers.py  urls.py  utils.py  views.py
two_factor_auth/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_auto_20210626_1742.py
