[tool.poetry]
name = "django-2fa-qna"
version = "0.1.0"
description = "2 factor authentication using questions and answers"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-rest-framework = "^0.1.0"
jwt = "^1.2.0"
orm-choices = "^1.0.0"
twine = "^3.4.1"
djangorestframework-simplejwt = "^4.7.1"
djangorestframework-camel-case = "^1.2.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[tool.isort]
# Make sure this matches `*.py` in .editorconfig
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
